Fix corsconfig